--- a/Bio.html
+++ b/Bio.html
@@ -37,7 +37,7 @@
     </nav>
 
 <div class="Video_todos">
-    <video src="Videos/Portada/Fondo_Todos_1.mp4" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
+    <video src="Videos/Portada/Fondo_Todos_1.webm" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
 </div>
 
 <section>
